@@ -229,3 +229,39 @@ td.welcome-link img{
 .menu-dropdown li.level1 a.level1 {
 	font-family: 'OpenSansRegular';
 }
+
+/* CALENDAR */
+
+.ui-datepicker {
+    width:auto;
+}
+
+.ui-datepicker-trigger:hover{
+    cursor:pointer;
+}
+
+.ui-widget-header {
+    background: url("../img/ui-bg_gloss-wave.png") repeat-x scroll 50% 50% #F6A828;
+    border: none;
+}
+
+#ui-datepicker-div button{
+    background: url("../img/ui-bg_gloss-wave.png") repeat-x scroll 50% 50% #F6A828;
+    color:#696455;
+    font-weight:bold;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    color: #696455;
+    font-size:12px;
+}
+
+/* css for timepicker */
+#ui-datepicker-div, .ui-datepicker{ width: 17%; font-size: 90%; }
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
